--- a/modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-account-impl/build.gradle
+++ b/modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-account-impl/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	compileOnly project(":apps:commerce:commerce-api")
 	compileOnly project(":apps:commerce:commerce-currency-api")
 	compileOnly project(":apps:commerce:commerce-discount-api")
+	compileOnly project(":apps:commerce:commerce-payment-api")
 	compileOnly project(":apps:commerce:commerce-price-list-api")
 	compileOnly project(":apps:commerce:commerce-product-api")
 	compileOnly project(":apps:commerce:commerce-shipping-engine-fixed-api")
