--- a/modules/dxp/apps/portal-reports-engine-console/portal-reports-engine-console-jasper/build.gradle
+++ b/modules/dxp/apps/portal-reports-engine-console/portal-reports-engine-console-jasper/build.gradle
@@ -23,8 +23,6 @@ dependencies {
 	compileInclude group: "org.apache.lucene", name: "lucene-sandbox", version: "7.1.0"
 	compileInclude group: "org.codehaus.groovy", name: "groovy-all", version: "2.4.21"
 	compileInclude group: "org.eclipse.jdt.core.compiler", name: "ecj", version: "4.4.2"
-	compileInclude group: "org.jfree", name: "jcommon", version: "1.0.24"
-	compileInclude group: "org.jfree", name: "jfreechart", version: "1.0.19"
 	compileInclude group: "org.olap4j", name: "olap4j", version: "1.2.0"
 
 	compileOnly group: "com.adobe.xmp", name: "xmpcore", version: "6.1.11"
@@ -36,6 +34,8 @@ dependencies {
 	compileOnly group: "org.apache.poi", name: "poi", version: "5.2.2"
 	compileOnly group: "org.apache.poi", name: "poi-ooxml", version: "5.2.2"
 	compileOnly group: "org.apache.poi", name: "poi-ooxml-lite", version: "5.2.2"
+	compileOnly group: "org.jfree", name: "jcommon", version: "1.0.24"
+	compileOnly group: "org.jfree", name: "jfreechart", version: "1.0.19"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
