--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -11743,6 +11743,7 @@ password-policy-enabled=Password Policy Enabled
 password-policy-enabled-help=Set this to true to use LDAP's password policy instead of the portal password policy. If set to true, it is possible that portal generated passwords will not match the LDAP policy. See the "passwords.regexptoolkit.*" properties for details on configuring RegExpToolkit in generating these passwords. Note that if this is enabled, the portal will not check for valid passwords, expired passwords, or users that are locked out. This is now handled by the LDAP server's password policy.
 password-recovery-is-disabled=Password recovery is disabled.
 password-recovery-question-and-answer=Password Recovery Question and Answer
+password-reminder=Password Reminder
 password-reset-notification=Password Reset Notification
 password-reset-required=Password Reset Required
 password-sent-email=Password Sent Email
