--- a/modules/apps/segments/segments-web/build.gradle
+++ b/modules/apps/segments/segments-web/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	compileOnly project(":apps:roles:roles-admin-api")
 	compileOnly project(":apps:roles:roles-item-selector-api")
 	compileOnly project(":apps:segments:segments-api")
+	compileOnly project(":apps:site:site-item-selector-api")
 	compileOnly project(":apps:static:portal-configuration:portal-configuration-metatype-api")
 	compileOnly project(":apps:users-admin:users-admin-item-selector-api")
 	compileOnly project(":core:osgi-service-tracker-collections")
