--- a/modules/apps/shared-dependencies/shared-dependencies-apache-commons/build.gradle
+++ b/modules/apps/shared-dependencies/shared-dependencies-apache-commons/build.gradle
@@ -3,6 +3,7 @@ dependencies {
 	compileInclude group: "commons-codec", name: "commons-codec", version: "1.15"
 	compileInclude group: "commons-digester", name: "commons-digester", version: "1.8.1"
 	compileInclude group: "commons-validator", name: "commons-validator", version: "1.7"
+	compileInclude group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileInclude group: "org.apache.commons", name: "commons-compress", version: "1.21"
 	compileInclude group: "org.apache.commons", name: "commons-csv", version: "1.9.0"
 	compileInclude group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
