--- a/modules/apps/calendar/calendar-service/build.gradle
+++ b/modules/apps/calendar/calendar-service/build.gradle
@@ -9,8 +9,6 @@ dependencies {
 	compileInclude group: "com.github.everit-org.json-schema", name: "org.everit.json.schema", version: "1.11.1"
 	compileInclude group: "com.google.re2j", name: "re2j", version: "1.2"
 	compileInclude group: "javax.cache", name: "cache-api", version: "1.1.1"
-	compileInclude group: "joda-time", name: "joda-time", version: "2.12.1"
-	compileInclude group: "org.joda", name: "joda-convert", version: "2.2.1"
 	compileInclude group: "org.jparsec", name: "jparsec", version: "3.1"
 	compileInclude group: "org.mnode.ical4j", name: "ical4j", version: "3.2.2"
 
@@ -20,7 +18,9 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.java", version: "default"
 	compileOnly group: "com.sun.mail", name: "jakarta.mail", version: "1.6.6"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
+	compileOnly group: "joda-time", name: "joda-time", version: "2.12.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
+	compileOnly group: "org.joda", name: "joda-convert", version: "2.2.1"
 	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
