--- a/modules/apps/portal-store/portal-store-gcs/build.gradle
+++ b/modules/apps/portal-store/portal-store-gcs/build.gradle
@@ -28,7 +28,6 @@ dependencies {
 	compileInclude group: "io.grpc", name: "grpc-context", version: "1.36.0"
 	compileInclude group: "io.opencensus", name: "opencensus-api", version: "0.28.3"
 	compileInclude group: "io.opencensus", name: "opencensus-contrib-http-util", version: "0.28.3"
-	compileInclude group: "joda-time", name: "joda-time", version: "2.12.1"
 	compileInclude group: "org.codehaus.jackson", name: "jackson-core-asl", version: "1.9.11"
 	compileInclude group: "org.threeten", name: "threetenbp", version: "1.5.0"
 
@@ -36,6 +35,7 @@ dependencies {
 	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-core", version: "2.13.4"
 	compileOnly group: "com.google.code.gson", name: "gson", version: "2.9.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly group: "joda-time", name: "joda-time", version: "2.12.1"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
