--- a/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray-dispatch-task-executor/build.gradle
+++ b/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray-dispatch-task-executor/build.gradle
@@ -28,9 +28,9 @@ dependencies {
 	compileInclude group: "io.grpc", name: "grpc-context", version: "1.36.0"
 	compileInclude group: "io.opencensus", name: "opencensus-api", version: "0.28.3"
 	compileInclude group: "io.opencensus", name: "opencensus-contrib-http-util", version: "0.28.3"
-	compileInclude group: "joda-time", name: "joda-time", version: "2.12.1"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
+	compileOnly group: "joda-time", name: "joda-time", version: "2.12.1"
 	compileInclude group: "org.codehaus.jackson", name: "jackson-core-asl", version: "1.9.11"
 	compileInclude group: "org.rauschig", name: "jarchivelib", version: "0.7.1"
 	compileInclude group: "org.threeten", name: "threetenbp", version: "1.5.0"
