--- a/modules/dxp/apps/saml/saml-opensaml-integration/build.gradle
+++ b/modules/dxp/apps/saml/saml-opensaml-integration/build.gradle
@@ -5,7 +5,6 @@ dependencies {
 	compileInclude group: "commons-collections", name: "commons-collections", version: "3.2.2"
 	compileInclude group: "commons-lang", name: "commons-lang", version: "2.6"
 	compileInclude group: "io.dropwizard.metrics", name: "metrics-core", version: "3.1.2"
-	compileInclude group: "joda-time", name: "joda-time", version: "2.12.1"
 	compileInclude group: "net.shibboleth.utilities", name: "java-support", version: "7.3.0"
 	compileInclude group: "org.apache.httpcomponents", name: "httpclient-cache", version: "4.5.13"
 	compileInclude group: "org.bouncycastle", name: "bcpkix-jdk15on", version: "1.69"
@@ -13,7 +12,6 @@ dependencies {
 	compileInclude group: "org.bouncycastle", name: "bcutil-jdk15on", version: "1.69"
 	compileInclude group: "org.codehaus.woodstox", name: "stax2-api", version: "3.1.4"
 	compileInclude group: "org.cryptacular", name: "cryptacular", version: "1.2.4"
-	compileInclude group: "org.joda", name: "joda-convert", version: "2.2.1"
 	compileInclude group: "xerces", name: "xercesImpl", version: "2.12.2"
 	compileInclude group: "xml-resolver", name: "xml-resolver", version: "1.2"
 
@@ -23,11 +21,13 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	compileOnly group: "javax.xml.stream", name: "stax-api", version: "1.0-2"
+	compileOnly group: "joda-time", name: "joda-time", version: "2.12.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileOnly group: "org.apache.httpcomponents", name: "httpmime", version: "4.5.13"
 	compileOnly group: "org.apache.santuario", name: "xmlsec", version: "2.1.7"
+	compileOnly group: "org.joda", name: "joda-convert", version: "2.2.1"
 	compileOnly group: "org.opensaml", name: "opensaml-core", version: "3.3.0"
 	compileOnly group: "org.opensaml", name: "opensaml-messaging-api", version: "3.3.0"
 	compileOnly group: "org.opensaml", name: "opensaml-messaging-impl", version: "3.3.0"
