--- a/modules/dxp/apps/search-experiences/search-experiences-service/build.gradle
+++ b/modules/dxp/apps/search-experiences/search-experiences-service/build.gradle
@@ -7,8 +7,6 @@ dependencies {
 	compileInclude group: "com.damnhandy", name: "handy-uri-templates", version: "2.1.7"
 	compileInclude group: "com.github.everit-org.json-schema", name: "org.everit.json.schema", version: "1.11.1"
 	compileInclude group: "com.google.re2j", name: "re2j", version: "1.2"
-	compileInclude group: "joda-time", name: "joda-time", version: "2.12.1"
-	compileInclude group: "org.joda", name: "joda-convert", version: "2.2.1"
 	compileInclude group: "org.json", name: "json", version: "20220320"
 
 	compileOnly group: "com.liferay", name: "biz.aQute.bnd.annotation", version: "4.2.0.LIFERAY-PATCHED-2"
@@ -16,7 +14,9 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "commons-lang", name: "commons-lang", version: "2.6"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
+	compileOnly group: "joda-time", name: "joda-time", version: "2.12.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
+	compileOnly group: "org.joda", name: "joda-convert", version: "2.2.1"
 	compileOnly group: "org.osgi", name: "org.osgi.annotation", version: "6.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
