--- a/modules/apps/commerce/commerce-theme-speedwell/commerce-theme-speedwell-site-initializer/build.gradle
+++ b/modules/apps/commerce/commerce-theme-speedwell/commerce-theme-speedwell-site-initializer/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 	compileOnly project(":apps:commerce:commerce-price-list-api")
 	compileOnly project(":apps:commerce:commerce-product-api")
 	compileOnly project(":apps:commerce:commerce-shipping-engine-fixed-api")
+	compileOnly project(":apps:portal-search:portal-search-api")
 	compileOnly project(":apps:site:site-api")
 	compileOnly project(":core:petra:petra-string")
 }
