--- a/modules/apps/commerce/commerce-theme-minium/commerce-theme-minium-site-initializer/build.gradle
+++ b/modules/apps/commerce/commerce-theme-minium/commerce-theme-minium-site-initializer/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	compileOnly project(":apps:commerce:commerce-theme-minium:commerce-theme-minium-api")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-soy")
+	compileOnly project(":apps:portal-search:portal-search-api")
 	compileOnly project(":apps:site:site-api")
 	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-string")
