--- a/modules/apps/content-dashboard/content-dashboard-web/build.gradle
+++ b/modules/apps/content-dashboard/content-dashboard-web/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-	compileInclude group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileInclude group: "org.apache.commons", name: "commons-lang3", version: "3.12.0"
 	compileInclude group: "org.apache.xmlbeans", name: "xmlbeans", version: "3.1.0"
 
@@ -10,6 +9,7 @@ dependencies {
 	compileOnly group: "com.zaxxer", name: "SparseBitSet", version: "1.2"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	compileOnly group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
+	compileOnly group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileOnly group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.apache.poi", name: "poi", version: "5.2.2"
