--- a/modules/dxp/apps/document-library-opener/document-library-opener-onedrive-web/build.gradle
+++ b/modules/dxp/apps/document-library-opener/document-library-opener-onedrive-web/build.gradle
@@ -8,7 +8,6 @@ dependencies {
 	compileInclude group: "com.microsoft.graph", name: "microsoft-graph-core", version: "1.0.9"
 	compileInclude group: "com.squareup.okhttp3", name: "okhttp", version: "3.12.1"
 	compileInclude group: "com.squareup.okio", name: "okio", version: "1.15.0"
-	compileInclude group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileInclude group: "org.apache.xmlbeans", name: "xmlbeans", version: "3.1.0"
 
 	compileOnly group: "com.google.code.gson", name: "gson", version: "2.9.0"
@@ -18,6 +17,7 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "default"
 	compileOnly group: "com.zaxxer", name: "SparseBitSet", version: "1.2"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
+	compileOnly group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileOnly group: "org.apache.commons", name: "commons-compress", version: "1.21"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.apache.poi", name: "poi", version: "5.2.2"
