--- a/modules/dxp/apps/portal-reports-engine-console/portal-reports-engine-console-jasper/build.gradle
+++ b/modules/dxp/apps/portal-reports-engine-console/portal-reports-engine-console-jasper/build.gradle
@@ -11,7 +11,6 @@ dependencies {
 	compileInclude group: "net.sf.jasperreports", name: "jasperreports-fonts", version: "6.20.0"
 	compileInclude group: "net.sf.jasperreports", name: "jasperreports-metadata", version: "6.20.0"
 	compileInclude group: "net.sourceforge.jexcelapi", name: "jxl", version: "2.6.10"
-	compileInclude group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileInclude group: "org.apache.commons", name: "commons-dbcp2", version: "2.0"
 	compileInclude group: "org.apache.commons", name: "commons-pool2", version: "2.4.2"
 	compileInclude group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
@@ -28,6 +27,7 @@ dependencies {
 	compileOnly group: "com.adobe.xmp", name: "xmpcore", version: "6.1.11"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "com.zaxxer", name: "SparseBitSet", version: "1.2"
+	compileOnly group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileOnly group: "org.apache.commons", name: "commons-compress", version: "1.21"
 	compileOnly group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
