--- a/modules/dxp/apps/vldap/vldap-server/build.gradle
+++ b/modules/dxp/apps/vldap/vldap-server/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
 	compileInclude group: "commons-codec", name: "commons-codec", version: "1.15"
-	compileInclude group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileInclude group: "org.apache.commons", name: "commons-lang3", version: "3.9"
 	compileInclude group: "org.apache.commons", name: "commons-pool2", version: "2.6.2"
 	compileInclude group: "org.apache.directory.api", name: "api-all", version: "2.0.0.AM4"
@@ -23,6 +22,7 @@ dependencies {
 	compileInclude group: "org.samba.jcifs", name: "jcifs", version: "1.3.14-kohsuke-1"
 
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
