--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -18,6 +18,7 @@
         **/webapps/**,\
         definitions/web-facesconfig_1_2.xml,\
         modules/sdk/gradle-plugins-workspace/src/gradleTest/distBundleZip/plugins-sdk/**,\
+        modules/test/poshi/poshi-runner-resources/**,\
         portal-impl/src/portal-ext.properties,\
         portal-web/docroot/dtd/**
 
