--- a/test.properties
+++ b/test.properties
@@ -9327,7 +9327,8 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         Theme Loader,\
         Unit,\
         User Tracker,\
-        Util
+        Util,\
+        Verify Properties
 
     testray.team.data-engine.component.names=\
         Data Engine,\
