--- a/modules/apps/asset/asset-tags-service/build.gradle
+++ b/modules/apps/asset/asset-tags-service/build.gradle
@@ -10,6 +10,8 @@ dependencies {
 	compileOnly project(":apps:export-import:export-import-api")
 	compileOnly project(":apps:portal-search:portal-search-api")
 	compileOnly project(":apps:portal-search:portal-search-spi")
+	compileOnly project(":apps:portal-security:portal-security-service-access-policy-api")
+	compileOnly project(":apps:portal:portal-instance-lifecycle-api")
 	compileOnly project(":apps:staging:staging-api")
 	compileOnly project(":apps:subscription:subscription-api")
 	compileOnly project(":apps:xstream:xstream-configurator-api")
