--- a/workspaces/sample-default-workspace/client-extensions/easy/src/main/resources/application.properties
+++ b/workspaces/sample-default-workspace/client-extensions/easy/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+dxp.domains=localhost:8080
 logging.level.com.easy.service=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
