--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -100,6 +100,7 @@ a-rule-is-applied-to-this-field=A rule is applied to this field. By deleting it,
 a-rule-is-applied-to-this-field-by-changing-its-type=A rule is applied to this field. By changing its type, it will also affect the rule that is using it.
 a-single-line=A Single Line
 a-site-pages-variation-with-that-name-already-exists=A site pages variation with that name already exists.
+a-specific-category=A Specific Category
 a-staged-asset-library-cannot-be-connected-to-an-unstaged-site=A staged asset library cannot be connected to an unstaged site.
 a-style-book-with-the-key-x-already-exists=A style book with the key {0} already exists.
 a-subset-of-groups-has-been-displayed-for-you-to-review=A subset of groups has been displayed for you to review.
@@ -1476,6 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce Products Upload
 analyzer=Analyzer
 analyzer-help=Specify the analyzer to use on the input document's fields. If left blank, this defaults to the analyzer associated with the first entry in the fields configuration.
 and=And
+and-contains=AND contains
 and-operator=And Operator
 and-or-operator=And/Or Operator
 and-then-by=And Then By
@@ -1509,6 +1511,7 @@ any=Any
 any-account=Any Account
 any-asset=Any Asset
 any-category=Any Category
+any-category-of-the-same-vocabulary=Any Category of the Same Vocabulary
 any-changes-made-in-production-will-immediately-be-live.-continue-to-production=Any changes made in production will immediately be live. Continue to production?
 any-day=Any Day
 any-events-edited-previously-will-not-be-affected-by-this-modification=Any events edited previously will not be affected by this modification.
